--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "react-scroll-trigger": "^0.6.14",
     "react-simple-star-rating": "^5.1.7",
     "web-vitals": "^2.1.4"
   },
