--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.4",
     "node-fetch": "^2.6.7",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "p-iteration": "^1.1.8"
   },
   "description": ""
 }
